syntax = "proto3";
option cc_enable_arenas = true;

package NFq.NConfig;
option java_package = "ru.yandex.kikimr.proto";

import "ydb/core/fq/libs/config/protos/storage.proto";

////////////////////////////////////////////////////////////

message TDbPoolConfig {
    bool Enabled = 1;
    TYdbStorageConfig Storage = 2;
    uint32 MaxSessionCount = 3;
}
